--- a/templates/data.html
+++ b/templates/data.html
@@ -9,17 +9,25 @@
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <h1></h1>
-    <form action="/start">
-        <button class="btn btn-success">Open Camera To Take Attendence</button>
-    </form>
-    <br>
-    <form action="/stop">
-        <button  class="btn btn-danger">Stop Camera</button>
-    </form>
-    <br>
-    <form action="/showdata">
-        <button class="btn btn-primary">Show data</button>
-    </form>
-    <br>
+    <table class="table table-hover">
+        <thead>
+          <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Student No</th>
+            <th scope="col">Time</th>
+          </tr>
+        </thead>
+        <tbody>  
+            {% for k in message  %}
+            <tr>
+                <td>{{k.name}}</td>
+                <td>{{k.studentno}}</td>
+                <td>{{k.time}}</td>
+            
+            </tr>
+            
+            {% endfor %}
+        </tbody>
+      </table>
   </body>
 </html>
