--- a/templates/login.html
+++ b/templates/login.html
@@ -7,20 +7,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   </head>
   <body>
-    <img src="https://media-exp1.licdn.com/dms/image/C510BAQFu7gRr44I2Vg/company-logo_200_200/0/1575461477664?e=2147483647&v=beta&t=VQt_f8HavNyHXUiiGdfqNRXJpdr6SzkcJArQ211KsXA" alt="BRL">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <h1></h1>
-    <form action="/start">
-        <button class="btn btn-success">Open Camera To Take Attendence</button>
-    </form>
-    <br>
-    <form action="/stop">
-        <button  class="btn btn-danger">Stop Camera</button>
-    </form>
-    <br>
-    <form action="/showdata">
-        <button class="btn btn-primary">Show data</button>
-    </form>
-    <br>
-  </body>
+    <img src="https://media-exp1.licdn.com/dms/image/C510BAQFu7gRr44I2Vg/company-logo_200_200/0/1575461477664?e=2147483647&v=beta&t=VQt_f8HavNyHXUiiGdfqNRXJpdr6SzkcJArQ211KsXA" alt="BRL">
+    <h1>Attendence System for BRL</h1>
+    <form action="/validate" method="post">
+        {%csrf_token%}
+        {{message}}
+        <input class="form-control" type="text" placeholder="Enter Password" id="password" name = "password">
+        <br>
+        <button class="btn btn-primary">Login To Take Attendence</button>
+    </form>  
+    </body>
 </html>
